Se agrega a la Api la suscripcion a las noticias de Segured, ademas de implementar el controller y el dto :) (Testeado funcionando 100%)
